--- a/light-highlighter/manifest.json
+++ b/light-highlighter/manifest.json
@@ -4,12 +4,6 @@
   "description": "A lightweight text highlighter extension",
   "version": "1.0.0",
   "action": {
-    "default_icon": {
-      "16": "assets/icons/icon16.png",
-      "32": "assets/icons/icon32.png",
-      "48": "assets/icons/icon48.png",
-      "128": "assets/icons/icon128.png"
-    },
     "default_popup": "index.html",
     "default_title": "Light Highlighter"
   },
@@ -41,8 +35,7 @@
     "resources": [
       "index.html",
       "styles.css",
-      "main.js",
-      "assets/*"
+      "main.js"
     ],
     "matches": ["<all_urls>"]
   }]
